<resources>
    <string name="app_name">Floating SearchView</string>
    <string name="action_settings">Settings</string>
    <string name="behav">com.logicchip.blog_14_floatingsearchview.ScrollFabBehavior</string>
    <string name="just_go">JUST GO</string>
    <string name="splash_text_ln1">JUST GO, LOCATION AWARE</string>
    <string name="splash_text_ln2">LIFE STYLE SOCIAL PLATFORM</string>
    <string name="filter_razdaljina">Distance</string>
    <string name="KM">km</string>
    <string name="SIGNIN">SIGN IN / SIGN UP</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>

    <string name="home">Home</string>
    <string name="delete">Delete Account</string>
    <string name="email">Send Email</string>
    <string name="notifications">Notifications</string>
    <string name="OutIgo">Sign Out</string>
    <string name="code">TYPE IN THE CODE YOU HAVE RECEIVED</string>
    <string name="goOn">Continue</string>
    <string name="time">19:00</string>
    <string name="mobile">MOBILE NUMBER VERIFICATION</string>
    <stirng name="mobile_number">Mobile number</stirng>
    <string name="verify">Verify</string>

</resources>
