<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/SIGNIN"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.931" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:text="@string/facebook"
            app:srcCompat="@color/lightBlue" />


        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:text="@string/google"
            app:srcCompat="@color/lightBlue" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView02"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rp_condensed_pro"
            android:text="@string/splash_text_ln1"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:fontFamily="@font/rp_condensed_pro"
            android:text="@string/splash_text_ln2"
            android:textColor="#ffffff"
            android:textSize="28sp" />

    </RelativeLayout>


</LinearLayout>